# proun-kata

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  analyze_problem.sh  latest  pyproject.toml  requirements.txt  run_eval.sh
assets/: README.md  sample_transcriptions.json
assets/phonelm/: phone_bigram.json
client/web/: index.html
docs/: configuration.md  implementation.md
results/: index.csv
results/2025-10-12_22-33-02__reject-0_test/: batch_results.csv  run_meta.json
results/2025-10-12_22-54-18__reject-120/: batch_results.csv  run_meta.json
results/2025-10-12_23-03-02__reject-80/: batch_results.csv  run_meta.json
results/2025-10-12_23-13-26__reject-40/: batch_results.csv  run_meta.json
results/2025-10-13_09-18-13__conf-0.05_ms-20/: run_meta.json
results/2025-10-13_09-20-39__conf-0.05_ms-20/: batch_results.csv  run_meta.json
results/2025-10-13_09-22-50__conf-0.05_ms-20/: run_meta.json
results/2025-10-13_09-24-45__conf-0.05_ms-20/: batch_results.csv  run_meta.json
results/2025-10-13_09-26-56__conf-0.05_ms-20/: run_meta.json
results/2025-10-13_15-12-48__conf-0.05_ms-20/: batch_results.csv  run_meta.json
results/2025-10-13_15-45-05__conf-0.05_ms-20/: run_meta.json
results/2025-10-13_15-46-25__conf-0.05_ms-20/: run_meta.json
results/2025-10-13_17-04-37__conf-0.05_ms-20/: batch_results.csv  run_meta.json
server/app/: dependencies.py  main.py  (+1 more)
tests/: test_ctc_decode.py  test_health.py  test_kana_mapping.py  test_phones_normalise.py  test_postprocess.py  test_wav2vec2_backend.py
tools/: run_batch_tests.py
削除予定ファイル/: エージェント.md
(+278 files in other folders)
