[project]
name = "proun-kata"
version = "0.1.0"
description = "Pronunciation kata phoneme-to-kana service"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
extend-select = ["E", "F", "I", "UP", "B"]
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
